<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_walk"
            android:icon="@drawable/icon_walk"
            android:title="@string/menu_walk" />
        <item
            android:id="@+id/nav_beach"
            android:icon="@drawable/icon_beach"
            android:title="@string/menu_beach" />
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/icon_city"
            android:title="@string/menu_city" />
        <item
            android:id="@+id/nav_show"
            android:icon="@drawable/icon_spectacle"
            android:title="@string/menu_show" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_about_us"
            android:title="@string/menu_about" />

    </group>
</menu>
